--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -30,6 +30,10 @@
     font-weight: bold;
   }
   
+  .category {
+    text-transform: uppercase;
+  }
+
   .letterContainer p {
     margin-bottom: 1.2em;
   }
